--- a/predicting_personality.ipynb
+++ b/predicting_personality.ipynb
@@ -1994,7 +1994,7 @@
         "id": "gHceJ1qcuiOn"
       },
       "source": [
-        "# Train a Classifier using distilBERT Embeddings"
+        "# Train a classifier head on frozen distilBERT"
       ]
     },
     {
@@ -2177,33 +2177,7 @@
         "id": "TEt8iAhrctEe"
       },
       "source": [
-        "# Finetune distilBERT as a Classifier"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 72,
-      "metadata": {
-        "id": "UmsZ8rYOddEa"
-      },
-      "outputs": [],
-      "source": [
-        "class BERTClassifierUnfrozen(nn.Module):\n",
-        "    def __init__(self, num_labels=1):\n",
-        "        super().__init__()\n",
-        "        self.distilBERT = AutoModel.from_pretrained(\"distilbert-base-uncased\")\n",
-        "\n",
-        "        for param in self.distilBERT.parameters():\n",
-        "            param.requires_grad = True\n",
-        "\n",
-        "        self.classifier = nn.Linear(self.distilBERT.config.hidden_size, num_labels)\n",
-        "\n",
-        "    def forward(self, input_ids, attention_mask):\n",
-        "        with torch.no_grad():\n",
-        "            outputs = self.distilBERT(input_ids=input_ids, attention_mask=attention_mask)\n",
-        "        hidden_state = outputs.last_hidden_state[:, 0]\n",
-        "        logits = self.classifier(hidden_state)\n",
-        "        return logits\n"
+        "# Finetune unfrozen distilBERT with a classifier head"
       ]
     },
     {
@@ -2214,24 +2188,14 @@
       },
       "outputs": [],
       "source": [
-        "m2 = BERTClassifierUnfrozen().to(device)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 79,
-      "metadata": {
-        "id": "QQiLdl7idfsa"
-      },
-      "outputs": [],
-      "source": [
+        "model = models.BERTClassifierUnfrozen().to(device)\n",
+        "\n",
         "params_to_update = []\n",
         "for param_name, param in m2.named_parameters():\n",
         "    if param.requires_grad:\n",
         "        params_to_update.append(param)\n",
-        "        # print(f\"Params to train: {param_name}\")\n",
         "\n",
-        "optimizer_2 = Adam(params_to_update, lr=0.00002)"
+        "optimizer = Adam(params_to_update, lr=0.00002)"
       ]
     },
     {
@@ -2377,7 +2341,7 @@
       ],
       "source": [
         "train_loss, val_loss, val_acc = train_eval.train_and_evaluate(\n",
-        "    m2, train_loader, valid_loader, loss_fn, optimizer_2, device, epochs=10)"
+        "    model, train_loader, valid_loader, loss_fn, optimizer, device, epochs=10)"
       ]
     },
     {
@@ -2421,7 +2385,7 @@
         }
       ],
       "source": [
-        "accuracy, precision, recall, f1 = train_eval.evaluate_performance(m2, test_loader, device)\n",
+        "accuracy, precision, recall, f1 = train_eval.evaluate_performance(model, test_loader, device)\n",
         "\n",
         "\n",
         "print(\"\\nTest metrics:\")\n",
